test/Fail/InvalidNamePartSet.agda
test = forall _Set_ → Set
